--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "template-vite",
+    "name": "2026-collab-game-jam",
     "description": "A Phaser 3 template using Vite.",
     "version": "1.4.0",
     "type": "module",
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/phaserjs/template-vite.git"
+        "url": "git+https://github.com/phaserjs/2026-collab-game-jam.git"
     },
     "author": "Phaser Studio <support@phaser.io> (https://phaser.io/)",
     "license": "MIT",
@@ -15,8 +15,8 @@
     },
     "homepage": "https://github.com/phaserjs/template-vite#readme",
     "scripts": {
-        "dev": "node log.js dev & vite --config vite/config.dev.mjs",
-        "build": "node log.js build & vite build --config vite/config.prod.mjs",
+        "dev": "vite --config vite/config.dev.mjs",
+        "build": "& vite build --config vite/config.prod.mjs",
         "dev-nolog": "vite --config vite/config.dev.mjs",
         "build-nolog": "vite build --config vite/config.prod.mjs"
     },
